<resources>
    <string name="app_name">Music_Professional</string>
    <string name="play_list_home_title">Playlist hot</string>
    <string name="topic_home_title">Chủ đề hot</string>
    <string name="category_home_title">Thể loại dành cho bạn</string>
    <string name="favorite_home_title">Những ca khúc được yêu thích nhất</string>
    <string name="playmost_home_title">Nghe nhiều nhất trong tuần</string>
    <string name="more">Xem thêm</string>
    <string name="play_shuffle">Nghe ngẫu nhiên</string>
    <string name="play_repeat">Lặp bài hát</string>

    <string name="default_artists">Various Artists</string>

    <string name="update_like_song_error">Xảy ra lỗi yêu thích bài hát</string>

    <!--menu-->
    <string name="menu_add_playing">Thêm vào danh sách chơi</string>
    <string name="menu_add_favorite">Yêu thích</string>
    <string name="menu_add_playlist">Thêm vào playlist</string>
    <string name="menu_delete">Xóa khỏi danh sách</string>

    <string name="menu_account">Cá nhân</string>
    <string name="menu_cd">Khám phá</string>
    <string name="menu_more">Thêm</string>
    <string name="playlist">Playlist</string>
    <string name="add_song_playlist">Thêm bài hát vào Playlist</string>
    <string name="song">Bài hát</string>
    <string name="favorite">Yêu thích</string>
    <string name="Download">download</string>
    <string name="search_title">Tìm kiếm bài hát</string>
    <string name="login">Đăng nhập</string>
    <string name="user_name">Tên đăng nhập</string>
    <string name="user_password">Mật khẩu</string>
    <string name="login_with">Đăng nhập với </string>
    <string name="login_txt">Đăng nhập</string>
    <string name="register_txt">Đăng ký</string>
    <string name="register_title">Bạn chưa có tài khoản?</string>

    <string name="commentRequest">Bình luận</string>
    <string name="close">Đóng</string>
    <string name="txt_text_hint_message">Viết bình luận</string>
    <string name="txt_login_to_comment">Hãy đăng nhập để bình luận!</string>
    <string name="txt_just_now">Vừa xong</string>
    <string name="txt_posting">Đang viết</string>
    <string name="txt_error">Đã có lỗi xảy ra</string>
    <string name="txt_no_comment">Bài hát chưa có bình luận</string>
    <string name="txt_search_no_result">Không có kết quả tìm kiếm</string>
    <string name="txt_add_playlist">Tạo mới playlist</string>
    <string name="txt_success">Thành công</string>
    <string name="txt_repeat_one">Một bài</string>
    <string name="txt_repeat_all">Tất cả</string>
    <string name="txt_repeat_none">Không</string>

    <!--OFFLINE-->
    <string name="title_all_song">Song</string>
    <string name="title_album">Album</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_feed_back_developer">Feed back developer</string>
    <string name="title_add_song_to_favorite">Add songOffline to favorite</string>
    <string name="title_add_song_to_album">Add songOffline to playlistOffline</string>
    <string name="title_toolbar_playmusic">Playing music</string>
    <string name="title_menu_add_to_favorite">Add to favorite</string>
    <string name="title_menu_add_to_album">Add to playlistOffline</string>
    <string name="title_menu_delete_song">Delete songOffline</string>
    <string name="title_menu_delete_album">Delete playlistOffline</string>
    <string name="title_menu_update_album">Update name</string>
    <string name="title_dialog_add_album">Add new playlistOffline</string>
    <string name="title_dialog_delete_song">Delete songOffline</string>
    <string name="title_dialog_delete_album">Delete playlistOffline</string>
    <string name="title_dialog_rename_album">Rename playlistOffline</string>
    <string name="announcement_no_song">No songOffline in the memory</string>
    <string name="announcement_delete_song">Do you want delete</string>
    <string name="announcement_delete_album">Do you want delete playlistOffline</string>
    <string name="announcement_no_song_in_album">No songOffline in the playlistOffline</string>
    <string name="announcement_no_song_favorite">No songOffline favorite in the memory</string>
    <string name="announcement_delete_song_fail">Delete songOffline fail</string>
    <string name="announcement_add_song_favorite_success">Add songOffline to the favorite successfully</string>
    <string name="announcement_add_song_favorite_fail">Song is exist</string>
    <string name="announcement_add_favorite_nothing_song">No songOfflines selected</string>
    <string name="announcement_list_favorite_empty">All songOfflines have been added to favorite </string>
    <string name="announcement_no_album">You have not created any playlistOfflines yet</string>
    <string name="announcement_add_song_album_fail">Song is exist</string>
    <string name="announcement_add_song_album_success">Add songOffline to the playlistOffline successfully</string>
    <string name="description_image_view">button more</string>
    <string name="description_image_avatar">image songOffline</string>
</resources>
