<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/space_8">

    <LinearLayout
        android:id="@+id/menu_login_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/space_16">

        <ImageView
            android:id="@+id/account_avatar_setting"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_account" />

        <TextView
            android:id="@+id/txt_account_name_setting"
            style="@style/menu_personal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/space_16"
            android:text="@string/login"
            android:drawableEnd="@drawable/ic_action_more"/>


    </LinearLayout>

    <View
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <Switch
        android:id="@+id/sw_shuffle"
        android:text="@string/play_shuffle"
        android:textSize="@dimen/text_sie_18"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <TextView
        android:id="@+id/sw_repeat"
        android:textSize="@dimen/text_sie_18"
        android:text="@string/play_repeat"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_6"/>

    <RadioGroup
        android:id="@+id/setting_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_4"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/space_10">

        <RadioButton
            android:id="@+id/rd_repeat_none"
            style="@style/CustomRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/txt_repeat_none"
            android:textColor="@drawable/bg_radio_btn_setting_repeat" />

        <RadioButton
            android:id="@+id/rd_repeat_one"
            style="@style/CustomRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginEnd="42dp"
            android:layout_weight="1"
            android:text="@string/txt_repeat_one"
            android:textColor="@drawable/bg_radio_btn_setting_repeat" />

        <RadioButton
            android:id="@+id/rd_repeat_all"
            style="@style/CustomRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_repeat_all"
            android:textColor="@drawable/bg_radio_btn_setting_repeat" />
    </RadioGroup>

    <View
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="Thông tin phiên bản"
            android:textColor="@color/black"
            android:textSize="@dimen/text_sie_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_version"
            android:textColor="@color/black"
            android:textSize="@dimen/text_sie_18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginEnd="32dp"/>

    </LinearLayout>

    <View
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <FrameLayout
        android:id="@+id/btn_feedback_dev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="Phản hồi về ứng dụng"
            android:textColor="@color/black"
            android:textSize="@dimen/text_sie_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <View
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

</LinearLayout>