<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/height_title_sheet_comment">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_play_music"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/background_toolbar"
            app:titleTextColor="@color/black"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <android.support.v4.view.ViewPager
            android:id="@+id/pager_playing"
            android:layout_width="0dp"
            android:layout_height="370dp"
            android:contentDescription="@string/description_image_avatar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_play_music" />

        <CheckBox
            android:id="@+id/cbo_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:background="@drawable/like_state"
            android:stateListAnimator="@animator/anim_scale"
            app:layout_constraintBottom_toTopOf="@id/text_title_playing"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pager_playing" />

        <TextView
            android:id="@+id/text_title_playing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/text_sie_18"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:paddingLeft="@dimen/space_16"
            android:paddingRight="@dimen/space_16"
            app:layout_constraintBottom_toTopOf="@id/image_state"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pager_playing"
            />

        <TextView
            android:id="@+id/text_current_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_layout"
            android:layout_marginRight="@dimen/margin_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/seek_bar"
            app:layout_constraintTop_toBottomOf="@id/text_title_playing"
            />
        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="@dimen/width_seekbar"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_layout"
            android:layout_marginRight="@dimen/margin_layout"
            app:layout_constraintLeft_toRightOf="@id/text_current_duration"
            app:layout_constraintRight_toLeftOf="@id/text_duration"
            app:layout_constraintTop_toBottomOf="@id/text_title_playing"
            />
        <TextView
            android:id="@+id/text_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_layout"
            android:layout_marginRight="@dimen/margin_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/seek_bar"
            app:layout_constraintTop_toBottomOf="@id/text_title_playing"
            />

        <ImageView
            android:id="@+id/image_shuffle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_image_avatar"
            android:src="@drawable/ic_shuffle_off"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/image_previous"
            app:layout_constraintTop_toBottomOf="@id/seek_bar"
            />

        <ImageView
            android:id="@+id/image_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_image_avatar"
            android:src="@drawable/ic_previous"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/image_shuffle"
            app:layout_constraintRight_toLeftOf="@id/image_state"
            app:layout_constraintTop_toBottomOf="@id/seek_bar"
            />

        <ImageView
            android:id="@+id/image_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_image_avatar"
            android:src="@drawable/ic_play"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/image_previous"
            app:layout_constraintRight_toLeftOf="@id/image_next"
            app:layout_constraintTop_toBottomOf="@id/seek_bar"
            />

        <ImageView
            android:id="@+id/image_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_image_avatar"
            android:src="@drawable/ic_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/image_state"
            app:layout_constraintRight_toLeftOf="@id/image_repeat"
            app:layout_constraintTop_toBottomOf="@id/seek_bar"
            />

        <ImageView
            android:id="@+id/image_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_image_avatar"
            android:src="@drawable/ic_repeat_off"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/image_next"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seek_bar"
            />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_comment"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_behavior="@string/bottom_sheet_behavior"
        app:behavior_hideable="true"
        app:behavior_peekHeight="@dimen/height_title_sheet_comment"
        android:background="@color/color_grey_100">

        <ProgressBar
            android:id="@+id/progress_bar_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/txt_no_comment"
            android:text="@string/txt_no_comment"
            android:textSize="@dimen/text_sie_16"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="invisible"/>

        <RelativeLayout
            android:id="@+id/btn_comment"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/color_grey_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/txt_comment"
                android:textSize="@dimen/text_sie_20"
                android:paddingStart="@dimen/text_sie_16"
                android:text="@string/commentRequest"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/btn_close"
                android:textSize="@dimen/text_sie_20"
                android:paddingStart="@dimen/text_sie_16"
                android:text="@string/close"
                android:textColor="@color/black"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:paddingRight="@dimen/text_sie_16"
                android:visibility="invisible"/>

        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_comment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_comment"
            app:layout_constraintBottom_toTopOf="@id/input_text"/>

        <LinearLayout
            android:id="@+id/input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <EditText
                android:id="@+id/edt_content"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:cursorVisible="true"
                android:gravity="center_vertical"
                android:hint="@string/txt_text_hint_message"
                android:inputType="text|textCapSentences"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="#616161"
                android:textSize="16sp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/btn_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:contentDescription="@null"
                android:padding="8dp"
                android:src="@drawable/ic_send"
                android:tint="@color/colorPrimary" />
        </LinearLayout>


    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>
